--- a/AminoAcidFighter.qrc
+++ b/AminoAcidFighter.qrc
@@ -25,7 +25,7 @@
         <file>Pictures/AminoAcids/Tryptophan.png</file>
         <file>Pictures/AminoAcids/Tyrosine.png</file>
     </qresource>
-    <qresource prefix="/sound">
+    <qresource prefix="/sounds">
         <file>amino_acid_fighter_tune.wav</file>
     </qresource>
 </RCC>
