Winner_screen now had everybody lost

--- a/AminoAcidFighter.qrc
+++ b/AminoAcidFighter.qrc
@@ -25,6 +25,7 @@
         <file>Pictures/AminoAcids/Tryptophan.png</file>
         <file>Pictures/AminoAcids/Tyrosine.png</file>
         <file>Pictures/BackgroundAminoAcidFighter.png</file>
+        <file>Pictures/BackgroundAminoAcidFighter2.png</file>
     </qresource>
     <qresource prefix="/sounds">
         <file>amino_acid_fighter_tune.wav</file>
